--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,5 @@
-#baseURL = "http://example.org/"
-#languageCode = "en-us"
-#title = "My New Hugo Site"
-#theme = "hello-friend"
-
-#------------example site---------------
-
 baseURL = "https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/"
-title   = "Hey! It's Sandesh"
+title   = "Sandesh Pokhrel"
 languageCode = "en-us"
 theme = "hello-friend"
 
@@ -68,7 +61,7 @@ disableHugoGeneratorInject = false
 
   # Home subtitle of the index page.
   #
-  homeSubtitle = "How you Doin'?"
+  homeSubtitle = "Go Hard or Go Home"
   #"Let's take a stroll, shall we?" "Don't just stand there come on in" 
 
   # Set a background for the homepage
@@ -119,14 +112,13 @@ disableHugoGeneratorInject = false
   #
   [params.footer]
     trademark = true
-    rss = true
+    # rss = true
     copyright = true
     author = true
 
     topText = [""]
     bottomText = [
-      "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
-      "Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
+      "See ya around",
     ]
 
   # Colors for favicons
