changed base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/"
+baseURL = "https://sandesh-pokhrel.com.np"
 title   = "Sandesh Pokhrel"
 languageCode = "en-us"
 theme = "hello-friend"
