--- a/config.toml
+++ b/config.toml
@@ -177,8 +177,8 @@ disableHugoGeneratorInject = false
     #name = "stackoverflow"
     #url  = "https://www.stackoverflow.com/"
 
-# [languages]
-  # [languages.en]
+[languages]
+  [languages.en]
     subtitle  = "Namaste!"
     weight    = 1
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
