--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -17,10 +17,12 @@ dateFormat = "2 January 2006"
 [author]
   name = "Sandesh Pokhrel"
   image = "img/mee.jpg"
-  headline = "Probably playing football somewhere"
+  headline = "Off to never-never land"
   bio = "Maybe someday"
   links = [
     { twitter = "https://twitter.com/dovahkiin_08" },
     { linkedin = "https://www.linkedin.com/in/sandesh-p-93955b1b9/" },
     { github = "https://github.com/sandeshpokhrel54/" },
   ]
+
+
