--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -6,7 +6,7 @@ weight = 1
 rtl = false
 
 title = "Sandesh Pokhrel"
-description = "A place where I lay down my burdens."
+description = ""
 copyright = "&copy; 2023 Congo contributors"
 
 dateFormat = "2 January 2006"
