--- a/themes/congo/config/_default/config.toml
+++ b/themes/congo/config/_default/config.toml
@@ -1,14 +1,14 @@
-# # -- Site Configuration --
-# # Refer to the theme docs for more details about each of these parameters.
-# # https://jpanther.github.io/congo/docs/getting-started/
+# -- Site Configuration --
+# Refer to the theme docs for more details about each of these parameters.
+# https://jpanther.github.io/congo/docs/getting-started/
 
-# theme="congo"
-# baseURL = "https://sandesh-pokhrel.com.np"
-# defaultContentLanguage = "en"
+theme="congo"
+baseURL = "https://sandesh-pokhrel.com.np"
+defaultContentLanguage = "en"
 
-# enableRobotsTXT = true
-# paginate = 10
-# summaryLength = 0
+enableRobotsTXT = true
+paginate = 10
+summaryLength = 0
 
-# [outputs]
-#   home = ["HTML", "RSS", "JSON"]
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
