--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -26,6 +26,11 @@
   weight = 30
 
 [[main]]
+  name = "Publications"
+  pageRef = "publications"
+  weight = 30
+
+[[main]]
   name = "GitHub"
   url = "https://github.com/sandeshpokhrel54"
   weight = 40
