--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -17,7 +17,7 @@ dateFormat = "2 January 2006"
 [author]
   name = "Sandesh Pokhrel"
   image = "img/m.jpg"
-  headline = "Welcome to my humble abode!"
+  headline = "Computer Vision Engineer | Research Engineer"
   bio = ""
   links = [
     { linkedin = "https://www.linkedin.com/in/sandesh-p-93955b1b9/" },
