--- a/themes/congo/config/_default/languages.en.toml
+++ b/themes/congo/config/_default/languages.en.toml
@@ -5,7 +5,7 @@ isoCode = "en"
 weight = 1
 rtl = false
 
-title = "Hey"
+title = "Sandesh"
 description = "Welcome"
 # copyright = "Copy, _right?_ :thinking_face:"
 
